--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Rock, Paper, Scissors Game</title>
+        <title>Rock Paper Scissors Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h2>Computer Choice:<span id="computer-choice"></span></h2>
+        <h2>Your Choice:<span id="user-choice"></span></h2>
+        <h2>Result:<span id="result"></span></h2>
+
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
         
-        
-        <script src="script.js"></script>
+        <script src="script.js" charset="utf-8"></script>
     </body>
 </html>
